--- a/bower.json
+++ b/bower.json
@@ -30,6 +30,8 @@
     "paper-icon-button": "PolymerElements/paper-icon-button#^1.0.0",
     "iron-image": "PolymerElements/iron-image#^1.2.3",
     "paper-menu": "PolymerElements/paper-menu#^1.2.2",
-    "paper-item": "PolymerElements/paper-item#^1.1.4"
+    "paper-item": "PolymerElements/paper-item#^1.1.4",
+    "paper-fab": "PolymerElements/paper-fab#^1.2.0",
+    "iron-ajax": "PolymerElements/iron-ajax#^1.2.0"
   }
 }
