--- a/bower.json
+++ b/bower.json
@@ -32,6 +32,8 @@
     "paper-menu": "PolymerElements/paper-menu#^1.2.2",
     "paper-item": "PolymerElements/paper-item#^1.1.4",
     "paper-fab": "PolymerElements/paper-fab#^1.2.0",
-    "iron-ajax": "PolymerElements/iron-ajax#^1.2.0"
+    "iron-ajax": "PolymerElements/iron-ajax#^1.2.0",
+    "iron-pages": "PolymerElements/iron-pages#^1.0.7",
+    "paper-tabs": "PolymerElements/paper-tabs#^1.4.1"
   }
 }
