--- a/bower.json
+++ b/bower.json
@@ -34,6 +34,7 @@
     "paper-fab": "PolymerElements/paper-fab#^1.2.0",
     "iron-ajax": "PolymerElements/iron-ajax#^1.2.0",
     "iron-pages": "PolymerElements/iron-pages#^1.0.7",
-    "paper-tabs": "PolymerElements/paper-tabs#^1.4.1"
+    "paper-tabs": "PolymerElements/paper-tabs#^1.4.1",
+    "paper-checkbox": "PolymerElements/paper-checkbox#^1.1.3"
   }
 }
