--- a/bower.json
+++ b/bower.json
@@ -31,10 +31,11 @@
     "iron-image": "PolymerElements/iron-image#^1.2.3",
     "paper-menu": "PolymerElements/paper-menu#^1.2.2",
     "paper-item": "PolymerElements/paper-item#^1.1.4",
-    "paper-fab": "PolymerElements/paper-fab#^1.2.0",
     "iron-ajax": "PolymerElements/iron-ajax#^1.2.0",
     "iron-pages": "PolymerElements/iron-pages#^1.0.7",
     "paper-tabs": "PolymerElements/paper-tabs#^1.4.1",
-    "paper-checkbox": "PolymerElements/paper-checkbox#^1.1.3"
+    "paper-checkbox": "PolymerElements/paper-checkbox#^1.1.3",
+    "iron-list": "PolymerElements/iron-list#^1.2.8",
+    "paper-scroll-header-panel": "PolymerElements/paper-scroll-header-panel#^1.0.15"
   }
 }
