--- a/bower.json
+++ b/bower.json
@@ -36,6 +36,7 @@
     "paper-tabs": "PolymerElements/paper-tabs#^1.4.1",
     "paper-checkbox": "PolymerElements/paper-checkbox#^1.1.3",
     "iron-list": "PolymerElements/iron-list#^1.2.8",
-    "paper-scroll-header-panel": "PolymerElements/paper-scroll-header-panel#^1.0.15"
+    "paper-scroll-header-panel": "PolymerElements/paper-scroll-header-panel#^1.0.15",
+    "paper-toast": "PolymerElements/paper-toast#^1.2.1"
   }
 }
