--- a/bower.json
+++ b/bower.json
@@ -37,6 +37,8 @@
     "paper-checkbox": "PolymerElements/paper-checkbox#^1.1.3",
     "iron-list": "PolymerElements/iron-list#^1.2.8",
     "paper-scroll-header-panel": "PolymerElements/paper-scroll-header-panel#^1.0.15",
-    "paper-toast": "PolymerElements/paper-toast#^1.2.1"
+    "paper-toast": "PolymerElements/paper-toast#^1.2.1",
+    "paper-card": "PolymerElements/paper-card#^1.1.1",
+    "paper-toggle-button": "PolymerElements/paper-toggle-button#^1.1.2"
   }
 }
